# sources

./: README.md
greed_rewrite/: .gitignore  README.md  ecosystem.config.js  greed.sql  pyproject.toml  requirements.txt  sticker.py
greed_rewrite/greed/: __main__.py
greed_rewrite/greed/data/: emojis.json  emojis.py  emotes.py
greed_rewrite/greed/framework/: __init__.py  checks.py  cluster.py  errors.py  exceptions.py  help.py  ipc.py
greed_rewrite/greed/framework/discord/: __init__.py  allowed_mentions.py  command.py  context.py  file.py  flags.py  handlers.py  help.py  hierarchy.py  migrate.py  parser.py
greed_rewrite/greed/framework/pagination/: __init__.py
greed_rewrite/greed/framework/script/: __init__.py  variables.py
greed_rewrite/greed/framework/tools/: __init__.py  formatter.py  lazy.py  offload.py  ratelimit.py
greed_rewrite/greed/framework/utils/: audit.py  command_tracking.py  image.py  message.py  permissions.py  statistics.py
greed_rewrite/greed/plugins/config/: __init__.py
greed_rewrite/greed/plugins/economy/: __init__.py  chances.py  chart.py
greed_rewrite/greed/plugins/fun/: __init__.py
greed_rewrite/greed/plugins/information/: __init__.py  utils.py
greed_rewrite/greed/plugins/listeners/: __init__.py
greed_rewrite/greed/plugins/moderation/: __init__.py  classes.py  settings.py
greed_rewrite/greed/plugins/roleplay/: __init__.py  actions.py  classes.py
greed_rewrite/greed/plugins/starboard/: __init__.py
greed_rewrite/greed/plugins/tickets/: __init__.py
greed_rewrite/greed/shared/: config.py  r2.py  types.py
(+263 files in other folders)
